--- a/coupled-layout-design.tex
+++ b/coupled-layout-design.tex
@@ -83,6 +83,7 @@ In this study, wind farms are optimized to show the benefit of coupling turbine 
 	\input{Sections/cost_model}
 
 	\subsection{Optimization}
+	\label{sec:optimization}
 	\input{Sections/optimization}
 
 
