--- a/Sections/optimization.tex
+++ b/Sections/optimization.tex
@@ -77,7 +77,7 @@ We optimized each of the wind farms shown in Fig. \ref{layouts} with three diffe
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_075.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_175.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_275.pdf}
-  \caption{\label{shear_profile}The wind speed profiles for various wind shear exponents. With lower shear exponents, like $\alpha=0.075$ shown in Fig. \ref{wp075}, the wind speed does not vary dramatically with height. For higher wind shear, like $\alpha=0.275$ shown in Fig. \ref{wp275}, there is a significant wind speed increase with height.}
+  \caption{\label{shear_profile}The wind speed profiles for various wind shear exponents. With lower shear exponents the wind speed does not vary dramatically with height. For higher wind shear there is a significant wind speed increase with height.}
 \end{figure}
 
 \begin{figure}[htbp]
