--- a/coupled-layout-design.tex
+++ b/coupled-layout-design.tex
@@ -52,7 +52,7 @@
 
 
 \begin{abstract}
-In this study, wind farms are optimized to show the benefit of coupling turbine design and layout optimization, as well as including different turbine designs in a single wind farm. For our purposes, turbine design includes hub height, rotor diameter, rated power, and tower design. A 32-turbine wind farm and a 60-turbine wind farm are both considered, as well as a variety of turbine spacings and wind shear exponents. The wind turbines are modeled structurally, and structural constraints as well as turbine costs are considered in the optimization. Results indicate that coupled turbine design and layout optimization is superior to sequentially optimizing turbine design, then turbine layout. Coupled optimization results in an additional  2--5\% reduction in cost of energy compared to optimizing sequentially. Furthermore, wind farms with closely spaced wind turbines can greatly benefit from non-uniform turbine design throughout the farm. Some of these wind farms with heterogeneous turbine design have an additional 10\% cost of energy reduction compared to wind farms with identical turbines throughout the farm.
+In this study, wind farms are optimized to show the benefit of coupling turbine design and layout optimization, as well as including different turbine designs in a single wind farm. For our purposes, turbine design includes hub height, rotor diameter, rated power, tower diameter, tower shell thickness, and implicit blade chord and twist distributions. A 32-turbine wind farm and a 60-turbine wind farm are both considered, as well as a variety of turbine spacings and wind shear exponents. Structural constraints as well as turbine costs are considered in the optimization. Results indicate that coupled turbine design and layout optimization is superior to sequentially optimizing turbine design, then turbine layout. Coupled optimization results in an additional  2--5\% reduction in cost of energy compared to optimizing sequentially. Furthermore, wind farms with closely spaced wind turbines can greatly benefit from non-uniform turbine design throughout the farm. Some of these wind farms with heterogeneous turbine design have an additional 10\% cost of energy reduction compared to wind farms with identical turbines throughout the farm.
 \end{abstract}
 
 
@@ -145,7 +145,7 @@ In this study, wind farms are optimized to show the benefit of coupling turbine 
 %\disclaimer{TEXT} %% optional section
 
 \begin{acknowledgements}
-The BYU authors developed this journal article based on funding from the Alliance for Sustainable Energy, LLC, Managing and Operating Contractor for the National Renewable Energy Laboratory for the U.S. Department of Energy.  The NREL authors were supported by the U.S. Department of Energy (DOE) under Contract No. DE-AC36-08GO28308 with the National Renewable Energy Laboratory.
+The authors developed this journal article based on funding from the Alliance for Sustainable Energy, LLC, Managing and Operating Contractor for the National Renewable Energy Laboratory for the U.S. Department of Energy. 
 
 Funding for the work was provided by the DOE Office of Energy Efficiency and Renewable Energy, Wind Energy Technologies Office.
 
