--- a/Sections/AEP_calc.tex
+++ b/Sections/AEP_calc.tex
@@ -1,6 +1,5 @@
 \subsubsection{Power Calculation}
 We assume that up to rated power, the rotation of each wind turbine can be controlled such that a constant power coefficient of 0.42 is achieved. The wind turbine power generation is defined as:
-
 \begin{equation}
 P = 
 \begin{cases} 
@@ -8,13 +7,10 @@ P =
       P_{\text{rated}} & V_{\text{eff}} > V_{\text{rated}}
    \end{cases}
 \end{equation}
-
 \noindent Where $C_P$ is the power coefficient, $\rho$ is the air density which we assumed was 1.1716 kg m$^{-3}$, $A$ is the swept area of the turbine rotor, and $V_{\text{eff}}$ is an effective wind speed across rotor, which is defined as:
-
 \begin{equation}
 V_{\text{eff}} = V(1-L)
 \end{equation}
-
 \noindent Where $V$ is the free stream wind speed at the turbine hub height, and L is the total velocity deficit.
 %It is defined as an area-weighted average of the wind speeds across the rotor:
 %Katie: Is it a weighted area? or is it a weighted average? If the area is weighted, then you need a hypen (area-weighted average). 
@@ -27,11 +23,11 @@ V_{\text{eff}} = V(1-L)
 %Katie:Why is this? Why not do vertical integration? Out of your scope? Ignore this if you talk about this earlier in the paper, as I've jumped to methodology. 
 
 
-\subsubsection{Wind Direction and Speed Distributions}
+\subsubsection{Wind Speed Distributions}
 
-We used two different empirical wind distributions; first we used wind data from the city of Alturas, California, second we used data from the Princess Amalia Wind Farm, off the coast of the Netherlands. 
+%We used two different empirical wind distributions; first we used wind data from the city of Alturas, California, second we used data from the Princess Amalia Wind Farm, off the coast of the Netherlands. 
 %Katie: It almost seems as if this wind farm is both in the Netherlands and in California. You could either say. "from the city of Alturas, California and from the Princess Amalia Wind Farm, a wind farm off the coast of the Netherlands." OR "from both the Princess Amalia Wind Farm, a wind farm off the coast of the Netherlands, and the city of Alturas, California."
-The data we have is separated into 36 bins every 10 degrees, and 72 bins every 5 degrees, respectively. Both wind roses are shown in Section \ref{sec:optimization}, Fig. \ref{wind_roses}.
+%The data we have is separated into 36 bins every 10 degrees, and 72 bins every 5 degrees, respectively. Both wind roses are shown in Section \ref{sec:optimization}, Fig. \ref{wind_roses}.
 %, and the Princess Amalia wind rose is shown in Figure \ref{amalia}. 
 
 %\begin{figure}[htbp]
@@ -48,12 +44,13 @@ The data we have is separated into 36 bins every 10 degrees, and 72 bins every 5
 %\end{figure}
 
 %Just as wind direction varies, the wind speed at any direction also changes. 
-We represented the speeds at any direction as a Weibull distribution, which is commonly used to represent wind speed distributions \citep{justus1978methods,rehman1994weibull,dorvlo2002estimating}: 
+We represented the speeds at any wind direction as a Weibull distribution, which is commonly used to represent wind speed distributions \citep{justus1978methods,rehman1994weibull,dorvlo2002estimating}: 
 \begin{equation}
 W(x) = \Big(\frac{k}{V_{\text{mean}}}\Big)\Big(\frac{x}{V_{\text{mean}}}\Big)^{k-1}\text{exp}\Big[\Big(-\frac{x}{V_{\text{mean}}}\Big)^k\Big]
 \end{equation}
 The shape factor, $k$, was set as 1.76. 
-The mean speed for a given distribution, $V_{\text{mean}}$, can be different depending on the wind direction, meaning that each wind direction has an associated Weibull curve defining the wind speed distribution from that direction. The average speeds, $V_{\text{mean}}$, from every direction for each wind rose are shown in Section \ref{sec:optimization}, Fig. \ref{wind_speeds}.
+The mean speed for a given distribution, $V_{\text{mean}}$, can be different depending on the wind direction, meaning that each wind direction has an associated Weibull curve defining the wind speed distribution from that direction. 
+%The average speeds, $V_{\text{mean}}$, from every direction for each wind rose are shown in Section \ref{sec:optimization}, Fig. \ref{wind_speeds}.
 %The average speed, $V_{\text{mean}}$, for each Weibull distribution is the average wind speed defined for every direction of each wind rose, meaning that each wind direction has an associated Weibull distribution defining the wind speeds from that direction. The average wind speeds from every direction for each wind rose are shown in Section \ref{sec:optimization}, Fig. \ref{wind_speeds}.
 Figure \ref{weibull} shows the wind speed Weibull distributions for two different $V_{\text{mean}}$ values. 
 %Because of a lack of reliable wind speed data for the Alturas wind rose, it is assumed to have an average wind speed of eight meters per second, which is uniform across all wind directions. For the Princess Amalia Wind Farm, $V_{\text{mean}}$ is defined as the directionally averaged wind speed for each wind direction (thus each direction has a different $V_{\text{mean}}$).
@@ -80,9 +77,9 @@ Figure \ref{weibull} shows the wind speed Weibull distributions for two differen
 
 
 \subsubsection{Sampling}
-The direction data we have is binned into 36 directions for one wind rose, and 72 directions for the other. This is very fine sampling, 
+The direction data we have is binned into 36 directions for one wind rose, and 72 directions for the other. This is very fine sampling,
 %Katie: Why spell out seventy two but leave 36? Is that part of your style guide? If not, choose one and remain consistent throughout the paper. 
-more refined than necessary to accurately compute the annual energy production (AEP) of a wind farm. 
+from a convergence study, we found that it is more refined than necessary to accurately compute the annual energy production (AEP) of a wind farm. 
 %Katie: Then why do fine sampling? Or are you saying that you didn't use all these bins? This part confused me a bit. 
 For every wind direction at which the power is computed, the wake model must be called; therefore, reducing the number of directions at which the wind farm power is computed will reduce the time required to optimize. 
 %Katie: Consider instead: Reducing the number of directions at which the wind farm power is computed will reduce the time required to optimize because  the wake model must be called for every wind direction at which the power is computed. 
