--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -12,16 +12,16 @@ In this paper, we minimized the cost of energy (COE) of wind farms through layou
 %, a relatively new idea with great potential. 
 To successfully optimize the many variables that come from coupling layout and turbine design, we used exact analytic gradients as opposed to one of the gradient-free optimization methods commonly used in wind farm design.
 %Katie: For better transition, I would recommend these be the next few sentences: Although multi-model design spaces, like wind farm design spaces, are often well suited for gradient-free algorithms, gradient-based optimization methods can be useful in some cases, such as when using many turbines or when considering more design variables than just turbine design. Even though gradient-free algorithms may be superior in finding global optima compared to gradient-based methods, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. 
-Although multi-model design spaces, like wind farm design spaces, are often well suited for gradient-free algorithms, gradient-based optimization methods can be useful in some cases, such as when using many turbines or when considering more design variables than just turbine design. Even though gradient-free algorithms may be superior in finding global optima compared to gradient-based methods, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. 
+Although multi-modal design spaces, like wind farm design spaces, are often well suited for gradient-free algorithms, gradient-based optimization methods can be useful in some cases, such as when using many turbines or when considering more design variables than just turbine design. Even though gradient-free algorithms may be superior in finding global optima compared to gradient-based methods, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. 
 % The wind farm design space is highly multi-modal.
 % Often, multi-model design spaces are well suited for gradient-free algorithms which may be superior in finding global optima compared to gradient-based methods. 
 % However, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. %Katie: Start back here. --> 
 For large wind farms gradient-free methods become infeasible, and while gradient-based optimization methods converge to local minima, they scale much better with large problems. %Katie:  add this: 
 When considering several design variables or wind farms with many turbines,
 %Katie: take out: For wind farms with many turbines, or when considering more design variables than just turbine layout,
-gradient-based optimization with multiple starting points becomes the best, and often only, feasible solution method. With gradients, we optimized wind farms of 32--60 wind turbines (with the ability to do more), rather than limit ourselves to the 9--25 turbines typically used in gradient-free optimization studies.% \textbf{CITE HERE}.
+gradient-based optimization with multiple starting points becomes the best, and often only feasible solution method. Rather than limit ourselves to the 9--25 turbines typically used in gradient-free optimization studies, we used gradient-based methods to optimize wind farms of 32--60 wind turbines (with the ability to do more), coupled with as many as 18 additional variables for turbine design.% \textbf{CITE HERE}.
 
-Three main methods exist to decrease wake interactions among wind turbines in a wind farm: layout optimization, yaw control, and turbine design. The wind farm layout optimization problem has been widely studied in recent years. There is abundant literature from the research community discussing various methods to approach the wind farm layout optimization problem including gradient-free methods \citep{marmidis2008optimal,emami2010new,kusiak2010design,ituarte2011optimization,feng2015solving,gao2015wind} and gradient-based methods \citep{perez2013offshore,park2015layout,guirguis2016toward,gebraad2017maximization,Fleming2016}. The premise of layout optimization is simple: design the wind farm layout such that wake interactions among turbines are minimal.
+Three main methods exist to decrease wake interactions among wind turbines in a wind farm: layout optimization, yaw control, and turbine design. The wind farm layout optimization problem has been widely studied in recent years. There is abundant literature from the research community discussing various methods to approach the wind farm layout optimization problem including gradient-free methods \citep{marmidis2008optimal,emami2010new,kusiak2010design,ituarte2011optimization,feng2015solving,gao2015wind} and gradient-based methods \citep{perez2013offshore,park2015layout,Fleming2016,guirguis2016toward,gebraad2017maximization}. The premise of layout optimization is simple: design the wind farm layout such that wake interactions among turbines are minimal.
 %don't build wind turbines in wakes. %or maybe say where wake will effect energy production
 However, the problem is more challenging than it may initially seem. 
 The space of a wind farm is constrained, so for all realistic wind roses any turbine layout will have some wind turbines that are waked or partially waked some or all of the time. Therefore, to find the best layout often non-obvious tradeoffs must be made to minimize wake interactions throughout the entire farm.
@@ -38,7 +38,11 @@ Also, the number of wake simulations to model a wind farm scales with the square
 %   \caption{\label{layout}An unoptimized four turbine layout compared to an optimized layout. With the wind coming from the West (left), in layout (a) the two downstream turbines are directly in the wakes of the two upstream turbines which would result in decreased power production. In layout (b), none of the turbines are waked which is much more desirable.}
 % \end{figure}
 
-Turbine yaw control is another method to decrease wake interactions between wind turbines. Individually, each turbine in a wind farm produces the most power by facing directly into the incoming wind. However, in some cases upstream turbines can yaw into the incoming wind, steering their wakes away from downstream turbines \citep{jimenez2010application,fleming2016detailed}. Individually the yawed turbines produce less power, but the power increase from steering the wakes away from downstream turbines can result in a net gain for the entire wind farm \citep{gebraad2017maximization,Fleming2016}. Although not considered in this paper, yaw control can be applied to the wind farms in this study for additional improvements.
+
+Wake steering through turbine yaw control is another method to decrease wake interactions between wind turbines  \citep{Fleming2016,gebraad2017maximization}. Although not considered in this paper, yaw control can be applied to the wind farms in this study for additional improvements.
+%Turbine yaw control is another method to decrease wake interactions between wind turbines. Individually, each turbine in a wind farm produces the most power by facing directly into the incoming wind. However, in some cases upstream turbines can yaw into the incoming wind, steering their wakes away from downstream turbines \citep{jimenez2010application,fleming2016detailed}. Individually the yawed turbines produce less power, but the power increase from steering the wakes away from downstream turbines can result in a net gain for the entire wind farm \citep{gebraad2017maximization,Fleming2016}. Although not considered in this paper, yaw control can be applied to the wind farms in this study for additional improvements.
+
+
 % Figure \ref{yaw_control} shows a wind farm, in Figure \ref{no_yaw} all the turbines are facing directly into the wind. In this configuration the upstream turbines are producing as much power as they are capable. Figure \ref{yaw} shows the same farm with the upstream turbines yawed. Here the upstream turbines do not produce as much power individually, but the whole farm benefits.
 
 % \begin{figure}[htbp]
@@ -48,7 +52,7 @@ Turbine yaw control is another method to decrease wake interactions between wind
 %   \caption{\label{yaw_control}A four turbine wind farm with no yaw control compared to a farm with yaw control. With the wind coming from the West (left), in farm (a) the two downstream turbines are partially waked by the two upstream turbines which would result in decreased power production. In layout (b), the two upstream turbines are yawed, steering the wakes away from the downstream wind turbines.}
 % \end{figure}
 
-The third method to decrease wake interactions in a wind farm is turbine design. Turbine design is admittedly a broad category, involving a variety of elements. In this paper we will specifically explore heterogeneous hub heights, rotor diameters, turbine ratings, and tower and blade shapes in the same wind farm. In all, these variables represent a significant portion of wind turbine design and approach complete turbine design. 
+The third method to decrease wake interactions in a wind farm is turbine design. Turbine design is admittedly a broad category, involving a variety of elements. In this paper we will specifically explore heterogeneous hub heights, rotor diameters, turbine ratings, and tower diameters, tower shell thicknesses, and blade chord and twist distributions in the same wind farm. In all, these variables represent a significant portion of wind turbine design and approach complete turbine design. 
 In recent years heterogeneous turbine design has begun to receive attention from the research community, and several studies have begun to look into wind farms with mixed turbine designs. Chen et al.~optimized
 a wind farm layout and allowed turbines of different hub heights, finding a power output increase of 13.5\% and a COE decrease of 0.4\% \citep{chen2013wind}. Chowdhury et al.~found
 a 13.1\% increase in power generation in a wind farm with rotor diameter and layout treated as design variables, compared to a wind farm with just optimized layout \citep{chowdhury2010optimizing}. In another study, Chowdhury et al.~found that the capacity factor of a wind farm increases by 6.4\% when the farm is simultaneously optimized for layout and turbine type, with different turbine types in the wind farm, compared to a farm where every turbine is identical \citep{chowdhury2013optimizing}. Chen et al.~also performed a study in which the layout and turbine types are optimized in a wind farm. They found that the optimal wind farms had several different turbine types rather than one type throughout the entire farm \citep{chen2015multi}. In our previous work, we found that wind farms with low wind shear, closely spaced wind turbines, and small rotor diameters can greatly benefit from having turbines with different hub heights. For many of the wind farms that we optimized, wind farms with two different heights had a COE 5--10\% lower than the wind farms with all identical turbine heights \citep{stanley2018}.
@@ -59,7 +63,7 @@ We make the following contributions, which are either novel in the field or sign
 First, we include many aspects of turbine design as design variables coupled with turbine layout, rather than select one or two aspects of design or choose from a set of existing turbine models. This allows us to fully explore the design space and discover additional benefits associated with coupled design optimization.
 Second, in this paper we include the cost and structural impacts of changing the turbine design in our optimization objective and constraints.
 Third, we use gradient-based optimization with exact analytic gradients for every aspect of our wind farm model. This allows us to optimize large wind farms and include many design variables, which would be impossible with a gradient-free optimization approach.
-Fourth, we analyze many different wind farm sizes and wind conditions to identify which sites most benefit from heterogeneous turbine designs.
+Fourth, we analyze many different wind farm sizes and wind conditions.
 Fifth, we specifically address how sequentially optimizing turbine design then layout compares to fully coupling the design variables.
 
 
