--- a/Sections/conclusions.tex
+++ b/Sections/conclusions.tex
@@ -1,8 +1,8 @@
-The purpose of this study was to optimize wind turbine design and turbine layout in various wind farms. There was a particular focus on benefits from coupled turbine design and layout optimization, as well as having different turbine designs in the same wind farm. We simulated wind farms in this study by modifying and combining a variety of separate wind farm models, including the FLORIS wake model, portions of TowerSE and Plant\_CostsSE, and a surrogate of RotorSE. Wind farms were optimized to minimize COE using turbine layout and turbine design including hub height, rotor diameter, rated power, and tower design, as design variables. We optimized two wind farms, a contrived 32-turbine circular wind farm, and the 60-turbine Princess Amalia wind farm. Both were optimized for a range of shear exponents and turbine spacings. 
+The purpose of this study was to optimize wind turbine design and turbine layout in various wind farms. There was a particular focus on benefits from coupled turbine design and layout optimization, as well as having different turbine designs in the same wind farm. We simulated wind farms in this study by modifying and combining a variety of separate wind farm models, including the FLORIS wake model, portions of TowerSE and Plant\_CostsSE, and a surrogate of RotorSE. Wind farms were optimized to minimize COE using turbine layout and turbine design including hub height, rotor diameter, rated power, tower diameter, and tower shell thickness as design variables, as well as blade chord and twist distributions as implicit design variables. We optimized two wind farms, a contrived 32-turbine circular wind farm, and the 60-turbine Princess Amalia wind farm. Both were optimized for a range of shear exponents and turbine spacings. 
 
-Our main conclusions are twofold: coupled turbine design and layout optimization provides significant benefits compared to optimizing sequentially, and for many wind farms, two different turbine designs can greatly reduce the cost of energy. Without exception, coupled design and layout optimization performed better than optimizing the turbine design followed by the turbine layout. For a turbine design optimized in isolation, as was done in the sequential case, it was always most optimal to have a rotor diameter as large as the constraints would allow. Also, in coupled wind farm optimization, the wind farms with large spacing multipliers tended towards large rotor diameters. For this reason, the smallest wind farms benefited most from the coupled design and layout optimization, because the wind speeds were slow from strong wake interactions, and optimal rotor diameter was small---much different than the turbines optimized in isolation.
+Our main conclusions are twofold: coupled turbine design and layout optimization provides significant benefits compared to optimizing sequentially,  and for many wind farms, two different turbine designs can greatly reduce the cost of energy. Without exception, coupled design and layout optimization performed better than optimizing the turbine design followed by the turbine layout. For a turbine design optimized in isolation, as was done in the sequential case, it was always most optimal to have a rotor diameter as large as the constraints would allow. Also, in coupled wind farm optimization, the wind farms with large spacing multipliers tended towards large rotor diameters. For this reason, the smallest wind farms benefited most from the coupled design and layout optimization, because the wind speeds were slow from strong wake interactions, and optimal rotor diameter was small---much different than the turbines optimized in isolation. The coupled optimization was  better than sequential optimization, regardless of the wind shear exponent. 
 
-Including two different turbine designs in the same wind farm can be very beneficial in reducing wake interference between wind turbines and result in a lower COE compared to a farm with all identical wind turbines. For wind turbines that are close together, wake interactions are very strong between turbines. With different turbine sizes, the hub height and rotor diameter can be optimized along with layout to avoid wakes in the vertical plane along with the horizontal plane. For a spacing multiplier $\beta=0.5$, indicating very closely spaced wind turbines, our optimization results show that two different turbine designs can reduce COE by an additional 10\% compared to wind farms with homogeneous turbine design. For $\beta=1.0$, the farms with heterogeneous turbine designs are marginally better than the optimized farms with uniform design by 1--3\%. For the largest farms, $\beta=1.5$, there is no benefit to having two different turbine designs in the same wind farm. When the turbines are very far apart, the wake interactions are weak enough that the turbines can approach the turbine design optimized in isolation. 
+Including two different turbine designs in the same wind farm can be very beneficial in reducing wake interference between wind turbines and result in a lower COE compared to a farm with all identical wind turbines. For wind turbines that are close together, wake interactions are very strong between turbines. With different turbine sizes, the hub height and rotor diameter can be optimized along with layout to avoid wakes in the vertical plane along with the horizontal plane. For a spacing multiplier $\beta=0.5$, indicating very closely spaced wind turbines, our optimization results show that two different turbine designs can reduce COE by an additional 10\% compared to wind farms with homogeneous turbine design. For $\beta=1.0$, the farms with heterogeneous turbine designs are marginally better than the optimized farms with uniform design by 1--3\%. For the largest farms, $\beta=1.5$, there is no benefit to having two different turbine designs in the same wind farm. When the turbines are very far apart, the wake interactions are weak enough that the turbines can approach the turbine design optimized in isolation.  Again, the two turbine groups was  better than one group, regardless of the wind shear exponent. In our previous study, we optimized wind farms with two different turbine heights and keeping the rotor diameter and rated powers constant. We found that wind farms with low wind shear benefited much more from different hub heights than wind farms with higher wind shear \citep{stanley2018}. However, in this study the rotor diameters and rated powers were also optimized. The turbine design could be customized to best utilize the different wind resources available with different wind shear values. Therefore, the benefit from having two different turbine designs in the same wind farm is independent of the wind shear exponent.
 
 %Our results indicate significantly superior wind farm designs when turbine design and layout are optimized as coupled design variables, and when two different turbine design groups are included in the same wind farm. Conservatively, this practice can reduce wind farm COE by 3--5\% for many wind farm spacings and wind shear conditions, and can reduce COE by upwards of 10\% for the more extreme cases.
 % COE decrease when optimizing turbine design for the wind farm where it will operate. The original Princess Amalia wind farm (with $\beta=1.0$, so the original wind farm layout), experiences over a 20\% COE reduction when the wind turbines design is optimized along with the layout, for all wind shear exponents tested in this study. This is compared to the baseline wind farm, with 2 Megawatt turbines, 80 meter rotor diameter, and 100 meter hub height. 20\% COE decrease is unheard of! 
