--- a/Sections/new_results.tex
+++ b/Sections/new_results.tex
@@ -24,12 +24,13 @@ Figure \ref{circular_results} shows the optimal COE results for the circular win
 
 
 \subsubsection{Circular Wind Farm: Sequential Turbine Design then Layout Optimization}
-The gray dots in Fig. \ref{circular_results} show the optimal COE results for a sequential optimization. First, a turbine was designed for minimal COE in isolation with the free stream wind conditions. This turbine design was then used in the wind farm where the layout was optimized. 
+The gray dots in Fig. \ref{circular_results} show the optimal COE results for a sequential optimization. First, a turbine was designed for minimal COE in isolation with the free stream wind conditions. This turbine design was then used in a wind farm where the layout was subsequently optimized. 
 The rotor diameter was constrained such that the turbine spacing constraints would be satisfied in the baseline farm where the turbine would be installed. This was only applicable for the smallest wind farms, where $\beta=0.5$. 
-For each shear exponent, the optimal turbine design was the maximum rotor diameter and turbine rating allowed by the optimizer.
+For each shear exponent, the optimal turbine design was the maximum rotor diameter and turbine rating allowed by the optimizer. The rotor diameter was constrained by the spacing constraint for $\beta=0.5$, and by the bound constraint for other turbine spacings.
 %: 160 meters and 10 megawatts. 
 %The optimal height increased with the shear exponent: 90 meters, 147 meters, and 155 meters for the shear exponents of 0.075, 0.175, and 0.275, respectively.
-Figure \ref{circular_turbines_seq} shows the optimal isolated turbine designs for each shear exponent and spacing multiplier, as well as the baseline turbine design. Because these turbines are optimized in isolation, the designs for $\beta=1.0,1.5$ are the same. The only affect the spacing multiplier has on the design is a possible maximum rotor diameter (as in the case of $\beta=0.5$).
+Figure \ref{circular_turbines_seq} shows the optimal isolated turbine designs for each shear exponent and spacing multiplier, as well as the baseline turbine design. Because these turbines are optimized in isolation and the spacing constraint was not active, the designs for $\beta=1.0,1.5$ are the same. 
+%The only affect the spacing multiplier has on the design is a possible maximum rotor diameter (as in the case of $\beta=0.5$).
 When these optimized turbine designs are used in each wind farm instead of the baseline turbine design, there is a large COE improvement for the spacing multipliers of $\beta=1.0, 1.5$. For $\beta=1.0$, COE decreases 15.9--22.0\% compared to an optimized wind farm with the baseline turbine design. For $\beta=1.5$ the COE decrease is even larger, 24.8--26.6\% across all shear exponents. 
 %For the smallest wind farm, $\beta=0.5$, the turbine design optimized in isolation results in an infeasible farm layout. The rotor diameter is so large and the farm area so small that no layout is possible where the turbine spacing constraints are satisfied. However, even when the turbine spacing constraints were removed, this sequential turbine-design-then-layout optimization resulted in a worse COE for shear exponents of $\alpha=0.075,0.175$ compared to the layout-only optimization, and only a slightly better COE (2.3\%) for $\alpha=0.275$. 
 For the smallest wind farm, $\beta=0.5$, the turbine design optimized in isolation results in an extremely inefficient wind farm. When in the wind farm environment, exposed to much lower average wind speeds, this design results in a COE that is much worse than the baseline turbine design. The expense from a bigger and taller turbine, coupled with the strong wake interactions among turbines that are so closely spaced means that for this wind farm, optimizing the turbine in isolation actually decreases the wind farm performance. 
@@ -52,7 +53,7 @@ There are several conclusions we can make from both the sequential and coupled t
 %
 One could conceivably optimize the turbine design for some wind speed slower than the free stream and closer to the average speed in the wind farm, which would likely be better than optimizing the turbine design for the free stream wind speed. However, the average wind speed in a farm is dependent on the turbine layout, making it difficult to choose the correct speed for which to design the turbines. Thus, is important to couple the turbine design and layout optimization for a superior wind farm. 
 
-Figure \ref{circular_turbines_1} shows the optimal rotor diameters and hub heights for the coupled turbine design and layout optimizations. For a spacing multiplier $\beta=0.5$, the turbines are very close together and in general are heavily waked. Thus to satisfy spacing constraints and because the average wind speed is very low, the optimal rotor diameter is small: about 90 meters. When the turbines are spaced farther apart, shown for the larger spacing multipliers, the optimal rotor diameter is much larger: closer to 120--130 meters. In these farms, wake interactions are not as severe, meaning that the extra power production from larger rotors is worth the extra turbine capital cost. Also notice the trend of the optimal turbine height with wind shear exponent. For a low wind shear exponent, $\alpha=0.075$, the wind speed does not drastically change with height (see Fig. \ref{shear_profile}). Therefore, for this wind condition it is desireable to have short hub heights with a lower turbine capital cost. For the higher shear exponents, $\alpha=0.175,0.275$, the wind speed increases much more with height (See Fig. \ref{shear_profile}). In these cases, for every spacing multiplier, the extra cost of building the taller turbines is made up for in the additional power produced from the high wind speeds. Note that a larger rotor diameter reduces the relative spacing between turbines in the farm, as the original spacing was based on a diameter of 80 meters.
+Figure \ref{circular_turbines_1} shows the optimal rotor diameters and hub heights for the coupled turbine design and layout optimizations. For a spacing multiplier $\beta=0.5$, the turbines are very close together and in general are heavily waked. Thus to satisfy spacing constraints and because the average wind speed is very low, the optimal rotor diameter is small: about 90 meters. When the turbines are spaced farther apart, shown for the larger spacing multipliers, the optimal rotor diameter is much larger: closer to 120--130 meters. In these farms, wake interactions are not as severe, meaning that the extra power production from larger rotors is worth the extra turbine capital cost. Also notice the trend of the optimal turbine height with wind shear exponent; for a low wind shear exponent, $\alpha=0.075$, the wind speed does not drastically change with height (see Fig. \ref{shear_profile}). Therefore, for this wind condition it is desirable to have short hub heights with a lower turbine capital cost. For the higher shear exponents, $\alpha=0.175,0.275$, the wind speed increases much more with height (See Fig. \ref{shear_profile}). In these cases, for every spacing multiplier, the extra cost of building the taller turbines is made up for in the additional power produced from the high wind speeds. Remember that a larger rotor diameter reduces the relative spacing between turbines in the farm, as the original spacing was based on a diameter of 80 meters.
 
 \begin{figure}[htbp]
   \centering
@@ -61,7 +62,7 @@ Figure \ref{circular_turbines_1} shows the optimal rotor diameters and hub heigh
 \end{figure}
 
 
-In Fig. \ref{circular_power}, the black points show the optimal rated powers for the turbines in each optimization case. Notice that the optimal rated power scales with the turbine rotor diameter and hub height. Higher turbine rating is expensive. Therefore, the small rotors and short turbines, which are more heavily waked and don't produce as much power, do not require a large power rating. The extra cost is not justified by a very slight increase in power. For the high shear exponents and spacing multipliers, the turbines are exposed to faster wind speeds. These turbines are bigger and taller, and the extra power production from raising the rated pwoer is worth the additional cost.
+In Fig. \ref{circular_power}, the black points show the optimal rated powers for the turbines in each optimization case. The optimal rated power scales with the turbine rotor diameter and hub height. Higher turbine rating is expensive, therefore the small rotors and short turbines, which are more heavily waked and don't produce as much power, do not require a large power rating. The extra cost is not justified by a very slight increase in power. For the high shear exponents and spacing multipliers, the turbines are exposed to faster wind speeds. These turbines are bigger and taller, and the extra power production from raising the rated pwoer is worth the additional cost.
 
 
 \begin{figure}[htbp]
@@ -80,7 +81,7 @@ The two different rotor designs in the same wind farm help to improve COE by red
 
 Figure \ref{circular_turbines} shows the optimal rotor diameter and hub height of each turbine group for these cases of coupled turbine design and layout optimization with two different groups. For the spacing multiplier $\beta=0.5$, when the turbines are very close together, there is a large difference in both the rotor diameter and hub height of each turbine group. Group 1 is extremely small and short, smaller than even the baseline rotor diameter, while group 2 is much larger. Even if turbines from each group were right next to each other, there would be minimal wake interaction between the turbines. For the small wind farms, the sacrifice in power that comes from one very small and short turbine is made up for in the decreased wake inteference between turbine groups. Essentially, having two different turbine groups doubles the effective spacing between turbines, because turbines in different groups do not affect each other. For a larger spacing multiplier of $\beta=1.0$, each turbine group is still remarkably different in size and height. The turbines are larger than they were for the smallest wind farm because the average wind speed is faster when the turbines are spread farther apart. Notice that, compared to the optimized turbines for $\beta=0.5$, the smaller turbines when $\beta=1.0$ are larger and overlap more with the taller, bigger turbines. In this case, the power increase from bigger rotor diameters outweighs the benefit gained from reducing wake interference. 
 
-The turbine sizes for the largest wind farm, $\beta=1.5$, demonstrate the multi-modality of the wind farm optimization problem. For this spacing multiplier, each turbine group is more similar than in the previous wind farm sizes. For the lowest shear exponent, $\alpha=0.075$, both turbine groups are almost identical. For $\alpha=0.175,0.275$, there is some difference in each rotor diameter and hub height, although the difference is not as pronounced as it was for the smaller wind farms. However, Fig. \ref{circular_results} shows that for $\beta=1.5$ the optimal COE from coupled turbine design and layout optimization is the same with one and two height groups. So, a wind farm with the homogeneous turbine design shown in the bottom row of Fig. \ref{circular_turbines_1}, and a wind farm with two different turbine designs shown in the bottom row of Fig. \ref{circular_turbines} result in the same COE. The same optimal result is achieved with drastically different farms, each with different turbines and layouts.  
+The turbine sizes for the largest wind farm, $\beta=1.5$, demonstrate the multi-modality of the wind farm optimization problem. For this spacing multiplier, each turbine group is more similar than in the previous wind farm sizes. For the lowest shear exponent, $\alpha=0.075$, both turbine groups are almost identical. For $\alpha=0.175,0.275$, there is some difference in each rotor diameter and hub height, although the difference is not as pronounced as it was for the smaller wind farms. However, Fig. \ref{circular_results} shows that for $\beta=1.5$ the optimal COE from coupled turbine design and layout optimization is the almost exactly the same with one and two turbine groups. So, a wind farm with the homogeneous turbine design shown in the bottom row of Fig. \ref{circular_turbines_1}, and a wind farm with two different turbine designs shown in the bottom row of Fig. \ref{circular_turbines} result in a very similar optimal COE. The same optimal result is achieved with drastically different farms, each with different turbines and layouts.  
 
 \begin{figure}[htbp]
   \centering
@@ -97,8 +98,11 @@ Figure \ref{circular_power} shows the optimal rated power of each height group f
 
 \subsection{Princess Amalia Wind Farm Results}
 
+In this section, we will discuss the results from the Princess Amalia wind farm optimizations.
+All of the optimizations the were performed with the circular, 32-turbine wind farm were repeated for the larger, 60-turbine Princess Amalia wind farm. We will show and briefly discuss the optimal COE results, however the optimal turbine designs for the Princess Amalia wind farm optimizations were very similar to those for the circular wind farm, therefore will not be included in this paper.
+
 Figure \ref{amalia_results} shows the COE results for the 60-turbine Princess Amalia wind farm optimizations.  The trends are similar to the smaller, circular wind farm. Coupled turbine design and layout optimization is superior to optimizing each sequentially, especially for the smaller wind farms where the wind speeds are much lower than the free stream. For the farms with closely spaced wind turbines, two different turbine designs in the same farm are significantly better than the farms optimized with a homogeneous turbine design. If the largest wind farms ($\beta=1.5$) benefit from two different turbine design groups, that benefit is negligible. The optimal COE values for the Princess Amalia wind farm are slightly lower across the board than the circular wind farm COE values. This is partly because there are more turbines in the Princess Amalia wind farm so a smaller portion of the total cost comes from overhead, but is partly due to the Princess Amalia wind turbines being spaced slightly farther apart than those in the circular wind farms. Another major difference between the optimal COE values of each wind farm is in the optimization case with two turbine design groups. For the Princess Amalia wind farm and a spacing multiplier of 0.5, two turbine groups provides and additional COE decrease of 6.13--9.11\% compared to the wind farm with homogeneous turbine design. This is significant, however it is not as large as the 9.01--11.45\% additional COE decrease in the circular wind farm optimizations for the same spacing multiplier. Again, the main cause of this seems to be that the circular wind farms are slightly closer together than the Princess Amalia wind farms.
-The optimal turbine designs for the Princess Amalia wind farm optimizations were very similar to those for the circular wind farm, therefore will not be shown in this paper.
+
 
 
 
